feat: updated uploading photo